<resources>
    <string name="app_name">HelpingHands@GT</string>

    <!-- Strings related to login -->
    <string name="prompt_email">GT Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="action_back_to_sign_in">Back to Sign In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_message">Welcome Ctrl-Alt-Delight! Today is a good day!</string>
    <string name="welcome_resources">Here are some great resources you can always reach out to:\n\n
        GTPD\n
        STAMPS</string>
    <string name="title_activity_advisor">AdvisorActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="radio_button_student">Student</string>
    <string name="radio_button_advisor">Advisor</string>
    <string name="notifications_message">You do not have any new notifications at this time</string>
    <string name="inquiry_submit">Submit an inquiry.</string>
    <string name="submit">Submit</string>


    <string name="one">SD</string>
    <integer name="int1">1</integer>
    <string name="two">D</string>
    <integer name="int2">2</integer>
    <string name="three">N</string>
    <integer name="int3">3</integer>
    <string name="four">A</string>
    <integer name="int4">4</integer>
    <string name="five">SA</string>
    <integer name="int5">5</integer>

    <string name="question1">In the past two weeks, I have felt down, depressed, and hopeless.</string>
    <string name="question2">I generally feel well rested on most weekdays.</string>
    <string name="question3">I frequently have thoughts about suicide.</string>
    <string name="question4">I have friend(s) to turn to when I am feeling down.</string>

    <string name="action_submit_survey">Submit</string>
</resources>
